--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -23,11 +23,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.049" />
 
+    <TextView
+        android:id="@+id/magik"
+        android:layout_width="153dp"
+        android:layout_height="27dp"
+        android:text="Магия:"
+        android:textAlignment="textStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71" />
+
     <ImageButton
-        android:id="@+id/imageButton7"
+        android:id="@+id/inventory"
         android:layout_width="204dp"
         android:layout_height="191dp"
         android:backgroundTint="#F3EAD1"
+        android:onClick="inventory"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -37,25 +53,26 @@
         app:srcCompat="@drawable/pack" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/go"
         android:layout_width="185dp"
         android:layout_height="187dp"
         android:backgroundTint="#851818"
+        android:onClick="go"
         android:text="Сразиться"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.611" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="74dp"
-        android:layout_height="33dp"
+        android:layout_width="82dp"
+        android:layout_height="45dp"
         android:rotation="-25"
         android:rotationX="-12"
         android:rotationY="25"
@@ -65,13 +82,13 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintHorizontal_bias="0.241"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintVertical_bias="0.718" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/hpTr"
         android:layout_width="194dp"
         android:layout_height="26dp"
         android:text="Здоровье:"
@@ -85,7 +102,7 @@
         app:layout_constraintVertical_bias="0.355" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/weaponeTr"
         android:layout_width="193dp"
         android:layout_height="27dp"
         android:text="Оружие:"
@@ -99,7 +116,7 @@
         app:layout_constraintVertical_bias="0.614" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/Kol_voVragTr"
         android:layout_width="184dp"
         android:layout_height="42dp"
         android:text="Кол-во поверженных врагов:"
@@ -110,10 +127,10 @@
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.737" />
+        app:layout_constraintVertical_bias="0.834" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/protectionTr"
         android:layout_width="197dp"
         android:layout_height="23dp"
         android:text="Защита:"
@@ -127,7 +144,7 @@
         app:layout_constraintVertical_bias="0.52" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/powerTr"
         android:layout_width="192dp"
         android:layout_height="25dp"
         android:text="Сила:"
