--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.049" />
 
     <TextView
-        android:id="@+id/magik"
+        android:id="@+id/magikTr"
         android:layout_width="153dp"
         android:layout_height="27dp"
         android:text="Магия:"
@@ -130,7 +130,7 @@
         app:layout_constraintVertical_bias="0.834" />
 
     <TextView
-        android:id="@+id/protectionTr"
+        android:id="@+id/zahitaTr"
         android:layout_width="197dp"
         android:layout_height="23dp"
         android:text="Защита:"
