--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:id="@+id/usa"
         android:layout_width="149dp"
         android:layout_height="169dp"
+        android:backgroundTint="#F5EDD6"
         android:onClick="usa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +56,7 @@
         android:id="@+id/jelezo"
         android:layout_width="140dp"
         android:layout_height="196dp"
+        android:backgroundTint="#F5EDD6"
         android:onClick="jelezo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +70,7 @@
         android:id="@+id/tor"
         android:layout_width="150dp"
         android:layout_height="201dp"
+        android:backgroundTint="#F5EDD6"
         android:onClick="tor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
