--- a/app/src/main/res/layout/activity_fight.xml
+++ b/app/src/main/res/layout/activity_fight.xml
@@ -7,27 +7,15 @@
     tools:context=".FightActivity">
 
     <Button
-        android:id="@+id/hitButton"
-        android:layout_width="93dp"
-        android:layout_height="57dp"
+        android:id="@+id/choiceButton"
+        android:layout_width="156dp"
+        android:layout_height="59dp"
         android:backgroundTint="#851818"
-        android:text="Удар"
+        android:onClick="choice"
+        android:text="Выбор атаки и защиты"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.412"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954" />
-
-    <Button
-        android:id="@+id/blockButton"
-        android:layout_width="93dp"
-        android:layout_height="57dp"
-        android:backgroundTint="#851818"
-        android:text="Блок"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.954" />
@@ -58,13 +46,13 @@
 
     <Button
         android:id="@+id/inventoryFight"
-        android:layout_width="100dp"
-        android:layout_height="44dp"
+        android:layout_width="118dp"
+        android:layout_height="54dp"
         android:backgroundTint="#851818"
         android:onClick="inventory"
         android:text="Инвентарь"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,5 +60,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.002" />
+
+    <TextView
+        android:id="@+id/infFight"
+        android:layout_width="329dp"
+        android:layout_height="42dp"
+        android:background="#8E1313"
+        android:text="Нажми на кнопку выбора атаки"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.002" />
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="319dp"
+        android:layout_height="140dp"
+        android:backgroundTint="#851818"
+        android:onClick="next"
+        android:text="ДАЛЬШЕ"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.438"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.371" />
+
+    <TextView
+        android:id="@+id/infAtak"
+        android:layout_width="172dp"
+        android:layout_height="97dp"
+        android:background="#7A0D0D"
+        android:text="Инфа:"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.003" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
