--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -24,11 +24,12 @@
         app:layout_constraintVertical_bias="0.049" />
 
     <TextView
-        android:id="@+id/magikTr"
+        android:id="@+id/magikIn"
         android:layout_width="153dp"
         android:layout_height="27dp"
         android:text="Магия:"
         android:textAlignment="textStart"
+        android:textColor="#4A2929"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +94,7 @@
         android:layout_height="26dp"
         android:text="Здоровье:"
         android:textAlignment="textStart"
+        android:textColor="#4A2929"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +109,7 @@
         android:layout_height="27dp"
         android:text="Оружие:"
         android:textAlignment="textStart"
+        android:textColor="#4A2929"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,6 +124,7 @@
         android:layout_height="42dp"
         android:text="Кол-во поверженных врагов:"
         android:textAlignment="textStart"
+        android:textColor="#4A2929"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +139,7 @@
         android:layout_height="23dp"
         android:text="Защита:"
         android:textAlignment="textStart"
+        android:textColor="#4A2929"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
